--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "joi-plus",
-	"version": "1.0.8",
+	"version": "1.1.0",
 	"description": "Joi with extra rules for string and array.",
 	"repository": "git://github.com/flamehamster/joi-plus",
 	"author": "Larry Png",
@@ -15,7 +15,11 @@
 		"validation",
 		"numeric",
 		"password",
-		"clean",
+		"escape",
+		"sanitize",
+		"country",
+		"iso 3166",
+		"country code",
 		"match",
 		"array"
 	]
