--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "joi-plus",
-	"version": "1.2.2",
+	"version": "1.3.0",
 	"description": "Joi with extra rules for string and array.",
 	"repository": "git://github.com/flamehamster/joi-plus",
 	"author": "Larry Png",
 	"license": "BSD-3-Clause",
 	"main": "index.js",
 	"dependencies": {
-		"@hapi/joi": "^17.1.1"
+		"joi": "^17.4.0"
 	},
 	"keywords": [
 		"joi",
